add point header file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,11 +28,13 @@ SET(CORE_HEADERS)
 
 SET(CORE_SOURCES
      src/core/vector.cpp
+     src/core/point.cpp
 )
 
 SET(CORE_HEADERS
      src/core/vector.h
      src/core/render.h
+     src/core/point.h
 )
 
 INCLUDE_DIRECTORIES(src)
